2005-07-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce 2.7.0

	* site/index.html: add 2.7 table.

	* site/install/devel.ihtml: add 2.7

2005-06-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/documentation.html: add 2.7

2005-07-03  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/install/stable.ihtml: Add Slackware.

2005-06-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/index.html: Use old=oud, ancient=antiek.

2005-06-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/older-versions.html: Fix: Warty iso Hoary 2.2.6.

	* site/install/old.ihtml: Add Hoary: 2.4.5.  Move Fedora and Red
	Hat into alphabetic order.

	* site/news.ihtml (href): Typo.

2005-06-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml (href): Bugfix: Linux (x86).  Remove stray </dd>

2005-06-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: remove ghostscript notice.

	* site/install/stable.ihtml: 2.6.0-2.dmg.

2005-06-27  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/index.html: update links.
	
	* fr/install/index.html: translation of the new file.
	
	* fr/install/using.html: update links.

2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: v2.5

2005-06-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/old.ihtml: Bugfix: In Debian Etch and Sid.
	* site/install/older-versions.html: Rename from old to ancient branch.
	Bugfix: not in Debian/Sid.  (Mark vd Borre).
	
2005-06-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/announce-v2.6.html: rephrasing.

	* site/news.ihtml (href): add THANKS

	* nl/index.html: update links.

	* site/about/faq.html: link to v2.6 docs.

	* site/install/index.html: new file.

	* site/install/using.html: link v2.6 docs.

	* site/news.ihtml (Preferably): announce 2.6

	* site/index.html (Module): add 2.6 to quicklinks.

	* site/documentation.html (Module): set 2.6 as default.

	* site/install/stable.ihtml (Module): change to 2.6
