@@ -97,7 +97,7 @@
     <td>
       <strong>
 	_("Download <a href='%s'>tarball</a>",
-	"http://lilypond.org/download/v2.6/lilypond-2.7.0.tar.gz")
+	"http://lilypond.org/download/v2.7/lilypond-2.7.0.tar.gz")
 	(<a href="../devel/#warning">_("warning")</a>)
       </strong>
     </td>
